objects/iahelp__SemanticTag__c.object
<CustomObject>
    <description>Meta data tags that can be applied to Help records to enhance meaning and allow for a greater degree of implicit meaning</description>
    <fields>
        <fullName>iahelp__CollectiveObverse__c</fullName>
        <description>Noun describing the Obverse of this Tag as applied to collections of records</description>
        <inlineHelpText>Noun describing the Obverse of this Tag as applied to collections of records</inlineHelpText>
        <label>Collective Obverse</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iahelp__CollectiveTag__c</fullName>
        <description>Noun describing collections of records imbued with this Tag</description>
        <inlineHelpText>Noun describing collections of records imbued with this Tag</inlineHelpText>
        <label>Collective Tag</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iahelp__Obverse__c</fullName>
        <description>Word or short phrase starting with a present tense verb that describes the implied obverse conferred by assigning this tag to a record</description>
        <inlineHelpText>Word or short phrase starting with a present tense verb that describes the implied obverse conferred by assigning this tag to a record</inlineHelpText>
        <label>Obverse</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iahelp__ShortObverse__c</fullName>
        <description>Abbreviated version of the full Obverse of the Tag</description>
        <inlineHelpText>Abbreviated version of the full Obverse of the Tag</inlineHelpText>
        <label>Short Obverse</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iahelp__Tag__c</fullName>
        <description>Word or short phrase starting with a present tense verb that describes  the semantics conferred by assigning this tag to a record</description>
        <inlineHelpText>Word or short phrase starting with a present tense verb that describes  the semantics conferred by assigning this tag to a record</inlineHelpText>
        <label>Tag</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Semantic Tag</label>
    <listViews>
        <fullName>iahelp__All</fullName>
        <columns>NAME</columns>
        <columns>iahelp__Tag__c</columns>
        <columns>iahelp__CollectiveTag__c</columns>
        <columns>iahelp__ShortObverse__c</columns>
        <columns>iahelp__Obverse__c</columns>
        <columns>iahelp__CollectiveObverse__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Semantic Tags</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>